* Neue Logos eingebaut.  * Farben geändert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@775 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/layout.xhtml
+++ b/JEE6/FacesTest/WebContent/layout.xhtml
@@ -7,12 +7,12 @@
 		<h:head>
 			<title><ui:insert name="title"/></title>
 			<h:outputStylesheet library="css" name="display.css"  />
-			<link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/img/favicon.ico"/>
+			<link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/img/favicon.png"/>
 		</h:head>
 		<div class="header">
 			<table>
 				<tr>
-					<td class="logo"><h:graphicImage value="/img/ii.png" /></td>
+					<td class="logo"><h:graphicImage value="/img/logo.png" /></td>
 					<td class="space"/>
 					<td class="welcome">
 						<h1><ui:insert name="title"/></h1>
