--- a/Website/org.jeegen.website/aboutus.html
+++ b/Website/org.jeegen.website/aboutus.html
@@ -12,7 +12,7 @@ layout: default
 		<div class="col-md-6">
 			<div id="aboutUsText">
 				<h3>
-					<a href="http://www.xing.com/profile/Steffen_Mork">Steffen A.
+					<a href="http://www.xing.com/profile/Steffen_Mork" target="_extern">Steffen A.
 						Mork</a>
 				</h3>
 				<div id="aboutUsImage">
@@ -21,8 +21,11 @@ layout: default
 				<p>Steffen hat an der Universität Dortmund Kerninformatik
 					studiert. Nach seinem Studium hat er im Bereich
 					Dokumentenmanagement und Java Enterprise erste Erfahrungen
-					gesammelt. Seit 2005 ist er bei der itemis AG für die Infrastruktur
-					und Beschaffung verantwortlich. Als Software Entwickler hat er
+					gesammelt. Von 2005 bis 2015 war er bei der
+					<a href="http://www.itemis.de" target="_extern">itemis AG</a> für die Infrastruktur
+					und Beschaffung verantwortlich. Seit August 2015 arbeitet er
+					für <a href="http://www.gira.de/" target="_extern">GIRA</a> als
+					Embedded Firware-Entwickler. Als Software-Entwickler hat er
 					mehrere Frameworks entwickelt:</p>
 				<p>Die modellgetriebene Server-Konfiguration ermöglicht es auf
 					einfache Weise, den Soll-Zustand der itemis-Server zu verwalten.
@@ -43,7 +46,7 @@ layout: default
 					verwendet, um die Produktivität zu erhöhen.
 				</p>
 				<p>
-					Steffen berichtet in seinem Blog <a href="http://morknet.de/">morknet.de</a>
+					Steffen berichtet in seinem Blog <a href="http://morknet.de/" target="_extern">morknet.de</a>
 					regelmäßig von neuen Aktivitäten.
 				<p>
 			</div>
@@ -52,14 +55,15 @@ layout: default
 		<div class="col-md-6">
 			<div id="aboutUsText">
 				<h3>
-					<a href="http://www.xing.com/profile/Dominik_Pieper">Dominik
+					<a href="http://www.xing.com/profile/Dominik_Pieper" target="_extern">Dominik
 						Pieper</a>
 				</h3>
 				<div id="aboutUsImage">
 					<img src="images/pieper.dominik.jpg" />
 				</div>
 				<p>Dominik hat an der Hochschule Bochum allgemeine Informatik
-					studiert. Seit 2011 ist er bei der itemis AG ebenfalls in der
+					studiert. Von 2011 bis 2015 war er bei der
+					<a href="http://www.itemis.de" target="_extern">itemis AG</a> ebenfalls in der
 					Abteilung für Infrastruktur und Beschaffung.</p>
 				<p>
 					Seit 2012 arbeitet Dominik mit an den <a
@@ -75,7 +79,7 @@ layout: default
 					Bestellungen werden entgegengenommen, Lizenzen generiert und via
 					E-Mail an den Kunden versandt.</p>
 				<p>
-					Dominik schreibt in seinem Blog <a href="http://pieperhome.de/">pieperhome.de</a>
+					Dominik schreibt in seinem Blog <a href="http://pieperhome.de/" target="_extern">pieperhome.de</a>
 					zu verschiedenen Themen.
 				</p>
 			</div>
