--- a/Website/org.jeegen.website/aboutus.html
+++ b/Website/org.jeegen.website/aboutus.html
@@ -21,11 +21,13 @@ layout: default
 				<p>Steffen hat an der Universität Dortmund Kerninformatik
 					studiert. Nach seinem Studium hat er im Bereich
 					Dokumentenmanagement und Java Enterprise erste Erfahrungen
+					bei der
+					<a href="http://www.materna.de" target="_extern">MATERNA GmbH</a>
 					gesammelt. Von 2005 bis 2015 war er bei der
 					<a href="http://www.itemis.de" target="_extern">itemis AG</a> für die Infrastruktur
 					und Beschaffung verantwortlich. Seit August 2015 arbeitet er
 					für <a href="http://www.gira.de/" target="_extern">GIRA</a> als
-					Embedded Firware-Entwickler. Als Software-Entwickler hat er
+					Embedded Firmware-Entwickler. Als Software-Entwickler hat er
 					mehrere Frameworks entwickelt:</p>
 				<p>Die modellgetriebene Server-Konfiguration ermöglicht es auf
 					einfache Weise, den Soll-Zustand der itemis-Server zu verwalten.
