Removed dead link.

--- a/Website/org.jeegen.website/aboutus.html
+++ b/Website/org.jeegen.website/aboutus.html
@@ -79,10 +79,7 @@ layout: default
 					Lizenzsystem. Flexmento bildet eine Schnittstelle zwischen einem
 					Magento-Webshop und einem FlexNet- Lizenzserver. Erfolgreiche
 					Bestellungen werden entgegengenommen, Lizenzen generiert und via
-					E-Mail an den Kunden versandt.</p>
-				<p>
-					Dominik schreibt in seinem Blog <a href="http://pieperhome.de/" target="_extern">pieperhome.de</a>
-					zu verschiedenen Themen.
+					E-Mail an den Kunden versandt.
 				</p>
 			</div>
 		</div>
